Opens modules for Netty, JEP 471, Unsafe